# play-ipywidget

./: README.md
play/: .coveragerc  .gitignore  LICENSE.txt  MANIFEST.in  README.md  Untitled.ipynb  codecov.yml  install.json  package-lock.json  package.json  play.json  pyproject.toml  pytest.ini  tsconfig.eslint.json  tsconfig.json  webpack.config.js
play/docs/: Makefile  environment.yml  make.bat
play/docs/source/: conf.py  develop-install.rst  index.rst  installing.rst
play/examples/: introduction.ipynb
play/play/: __init__.py  _frontend.py  _version.py  widget.py
play/play/nbextension/: extension.js
play/play/tests/: conftest.py  test_example.py  test_nbextension_path.py
play/src/: extension.ts  index.ts  plugin.ts  version.ts  widget.ts
